// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListsContainer renders 1`] = `
<div>
  <h1>
    Lists
  </h1>
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add List
  </button>
  <form
    autocomplete="off"
    class="collapse"
    id="form-collapse"
    style="padding: 6px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="name"
      >
        Name
      </label>
      <input
        class="form-control"
        id="name"
        name="name"
        placeholder="My super cool list"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="type"
      >
        Type
      </label>
      <select
        class="form-control"
        id="type"
        name="type"
      >
        <option
          value="BookList"
        >
          books
        </option>
        <option
          value="GroceryList"
        >
          groceries
        </option>
        <option
          value="MusicList"
        >
          music
        </option>
        <option
          value="ToDoList"
        >
          to-do
        </option>
      </select>
      
    </div>
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Create List
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr />
  <p>
    These lists have been shared with you but you have not accepted the invitation.
  </p>
  <div
    class="list-group"
  >
    <div
      class="pending-list list-group-item"
      data-test-class="pending-list"
      data-test-id="list-1"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <h5
                class="mb-1"
              >
                <i
                  class="fa fa-shopping-bag text-info mr-3"
                />
                foo
              </h5>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="pending-list-accept"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="pending-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr />
  <h1>
    Your Lists
  </h1>
  <p>
    These are lists you've created or you've accepted an invitation from someone else.
  </p>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="list-group"
  >
    <div
      class="accepted-list list-group-item"
      data-test-class="non-completed-list"
      data-test-id="list-3"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/3"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-music text-info mr-3"
                  />
                  baz
                </h5>
              </a>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-complete"
                  style="pointer-events: auto; opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <a
                  class="p-0 mr-3"
                  data-test-id="incomplete-list-share"
                  href="/lists/3/users_lists"
                  style="pointer-events: auto; opacity: 1;"
                >
                  <i
                    class="fa fa-users fa-2x text-primary"
                  />
                </a>
                <a
                  class="p-0 mr-3"
                  data-test-id="incomplete-list-edit"
                  href="/lists/3/edit"
                  style="pointer-events: auto; opacity: 1;"
                >
                  <i
                    class="fa fa-edit fa-2x text-warning"
                  />
                </a>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="incomplete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accepted-list list-group-item"
      data-test-class="non-completed-list"
      data-test-id="list-5"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/5"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-list text-info mr-3"
                  />
                  foobar
                </h5>
              </a>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-complete"
                  disabled=""
                  style="pointer-events: none; opacity: 0.3;"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <a
                  class="p-0 mr-3"
                  data-test-id="incomplete-list-share"
                  disabled=""
                  href="/lists/5/users_lists"
                  style="pointer-events: none; opacity: 0.3;"
                >
                  <i
                    class="fa fa-users fa-2x text-primary"
                  />
                </a>
                <a
                  class="p-0 mr-3"
                  data-test-id="incomplete-list-edit"
                  disabled=""
                  href="/lists/5/edit"
                  style="pointer-events: none; opacity: 0.3;"
                >
                  <i
                    class="fa fa-edit fa-2x text-warning"
                  />
                </a>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="incomplete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Completed Lists
  </h2>
  <p>
    These are the completed lists most recently created. 
    <a
      href="/completed_lists"
    >
      See all completed lists here.
    </a>
      Previously refreshed lists are marked with an asterisk (*).
  </p>
  <div
    class="list-group"
  >
    <div
      class="accepted-list list-group-item"
      data-test-class="completed-list"
      data-test-id="list-2"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/2"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-book text-info mr-3"
                  />
                  bar
                </h5>
              </a>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="complete-list-refresh"
                  style="pointer-events: auto; opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-redo fa-2x text-primary"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="complete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accepted-list list-group-item"
      data-test-class="completed-list"
      data-test-id="list-4"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/4"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-book text-info mr-3"
                  />
                  bar
                </h5>
              </a>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="complete-list-refresh"
                  disabled=""
                  style="pointer-events: none; opacity: 0.3;"
                  type="button"
                >
                  <i
                    class="fa fa-redo fa-2x text-primary"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="complete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListsContainer shows merge button when multi select 1`] = `
<div>
  <h1>
    Lists
  </h1>
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add List
  </button>
  <form
    autocomplete="off"
    class="collapse"
    id="form-collapse"
    style="padding: 6px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="name"
      >
        Name
      </label>
      <input
        class="form-control"
        id="name"
        name="name"
        placeholder="My super cool list"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="type"
      >
        Type
      </label>
      <select
        class="form-control"
        id="type"
        name="type"
      >
        <option
          value="BookList"
        >
          books
        </option>
        <option
          value="GroceryList"
        >
          groceries
        </option>
        <option
          value="MusicList"
        >
          music
        </option>
        <option
          value="ToDoList"
        >
          to-do
        </option>
      </select>
      
    </div>
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Create List
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr />
  <p>
    These lists have been shared with you but you have not accepted the invitation.
  </p>
  <div
    class="list-group"
  >
    <div
      class="pending-list list-group-item"
      data-test-class="pending-list"
      data-test-id="list-1"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <h5
                class="mb-1"
              >
                <i
                  class="fa fa-shopping-bag text-info mr-3"
                />
                foo
              </h5>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="pending-list-accept"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="pending-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr />
  <h1>
    Your Lists
  </h1>
  <p>
    These are lists you've created or you've accepted an invitation from someone else.
  </p>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      Hide
       Select
    </button>
  </div>
  <div
    class="list-group"
  >
    <div
      class="accepted-list list-group-item"
      data-test-class="non-completed-list"
      data-test-id="list-3"
      style="display: block;"
    >
      <div
        class="list-item-row row"
      >
        <div
          class="mx-sm-auto col-1"
        >
          <input
            style="position: absolute; top: 40%; left: 40%;"
            type="checkbox"
          />
          <div
            class="list-item-multi-divider"
          />
        </div>
        <div
          class="col-sm-11 col-10"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/3"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-music text-info mr-3"
                  />
                  baz
                </h5>
              </a>
            </div>
            <div
              class="list-multi-created pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-complete"
                  style="pointer-events: auto; opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <a
                  class="p-0 mr-3"
                  data-test-id="incomplete-list-share"
                  disabled=""
                  href="/lists/3/users_lists"
                  style="pointer-events: none; opacity: 0.3;"
                >
                  <i
                    class="fa fa-users fa-2x text-primary"
                  />
                </a>
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-merge"
                  type="button"
                >
                  <i
                    class="fa fa-compress-alt fa-2x text-warning"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="incomplete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accepted-list list-group-item"
      data-test-class="non-completed-list"
      data-test-id="list-5"
      style="display: block;"
    >
      <div
        class="list-item-row row"
      >
        <div
          class="mx-sm-auto col-1"
        >
          <input
            style="position: absolute; top: 40%; left: 40%;"
            type="checkbox"
          />
          <div
            class="list-item-multi-divider"
          />
        </div>
        <div
          class="col-sm-11 col-10"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/5"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-list text-info mr-3"
                  />
                  foobar
                </h5>
              </a>
            </div>
            <div
              class="list-multi-created pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-complete"
                  disabled=""
                  style="pointer-events: none; opacity: 0.3;"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <a
                  class="p-0 mr-3"
                  data-test-id="incomplete-list-share"
                  disabled=""
                  href="/lists/5/users_lists"
                  style="pointer-events: none; opacity: 0.3;"
                >
                  <i
                    class="fa fa-users fa-2x text-primary"
                  />
                </a>
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-merge"
                  type="button"
                >
                  <i
                    class="fa fa-compress-alt fa-2x text-warning"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="incomplete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Completed Lists
  </h2>
  <p>
    These are the completed lists most recently created. 
    <a
      href="/completed_lists"
    >
      See all completed lists here.
    </a>
      Previously refreshed lists are marked with an asterisk (*).
  </p>
  <div
    class="list-group"
  >
    <div
      class="accepted-list list-group-item"
      data-test-class="completed-list"
      data-test-id="list-2"
      style="display: block;"
    >
      <div
        class="list-item-row row"
      >
        <div
          class="mx-sm-auto col-1"
        >
          <input
            style="position: absolute; top: 40%; left: 40%;"
            type="checkbox"
          />
          <div
            class="list-item-multi-divider"
          />
        </div>
        <div
          class="col-sm-11 col-10"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/2"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-book text-info mr-3"
                  />
                  bar
                </h5>
              </a>
            </div>
            <div
              class="list-multi-created pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="complete-list-refresh"
                  style="pointer-events: auto; opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-redo fa-2x text-primary"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="complete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accepted-list list-group-item"
      data-test-class="completed-list"
      data-test-id="list-4"
      style="display: block;"
    >
      <div
        class="list-item-row row"
      >
        <div
          class="mx-sm-auto col-1"
        >
          <input
            style="position: absolute; top: 40%; left: 40%;"
            type="checkbox"
          />
          <div
            class="list-item-multi-divider"
          />
        </div>
        <div
          class="col-sm-11 col-10"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/4"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-book text-info mr-3"
                  />
                  bar
                </h5>
              </a>
            </div>
            <div
              class="list-multi-created pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="complete-list-refresh"
                  disabled=""
                  style="pointer-events: none; opacity: 0.3;"
                  type="button"
                >
                  <i
                    class="fa fa-redo fa-2x text-primary"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="complete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListsContainer shows modal to set the new list name for merging and clears 1`] = `
<div
  aria-hidden="true"
>
  <h1>
    Lists
  </h1>
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add List
  </button>
  <form
    autocomplete="off"
    class="collapse"
    id="form-collapse"
    style="padding: 6px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="name"
      >
        Name
      </label>
      <input
        class="form-control"
        id="name"
        name="name"
        placeholder="My super cool list"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="type"
      >
        Type
      </label>
      <select
        class="form-control"
        id="type"
        name="type"
      >
        <option
          value="BookList"
        >
          books
        </option>
        <option
          value="GroceryList"
        >
          groceries
        </option>
        <option
          value="MusicList"
        >
          music
        </option>
        <option
          value="ToDoList"
        >
          to-do
        </option>
      </select>
      
    </div>
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Create List
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr />
  <p>
    These lists have been shared with you but you have not accepted the invitation.
  </p>
  <div
    class="list-group"
  >
    <div
      class="pending-list list-group-item"
      data-test-class="pending-list"
      data-test-id="list-1"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <h5
                class="mb-1"
              >
                <i
                  class="fa fa-shopping-bag text-info mr-3"
                />
                foo
              </h5>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="pending-list-accept"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="pending-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr />
  <h1>
    Your Lists
  </h1>
  <p>
    These are lists you've created or you've accepted an invitation from someone else.
  </p>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      Hide
       Select
    </button>
  </div>
  <div
    class="list-group"
  >
    <div
      class="accepted-list list-group-item"
      data-test-class="non-completed-list"
      data-test-id="list-3"
      style="display: block;"
    >
      <div
        class="list-item-row row"
      >
        <div
          class="mx-sm-auto col-1"
        >
          <input
            style="position: absolute; top: 40%; left: 40%;"
            type="checkbox"
          />
          <div
            class="list-item-multi-divider"
          />
        </div>
        <div
          class="col-sm-11 col-10"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/3"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-music text-info mr-3"
                  />
                  baz
                </h5>
              </a>
            </div>
            <div
              class="list-multi-created pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-complete"
                  style="pointer-events: auto; opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <a
                  class="p-0 mr-3"
                  data-test-id="incomplete-list-share"
                  disabled=""
                  href="/lists/3/users_lists"
                  style="pointer-events: none; opacity: 0.3;"
                >
                  <i
                    class="fa fa-users fa-2x text-primary"
                  />
                </a>
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-merge"
                  type="button"
                >
                  <i
                    class="fa fa-compress-alt fa-2x text-warning"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="incomplete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accepted-list list-group-item"
      data-test-class="non-completed-list"
      data-test-id="list-5"
      style="display: block;"
    >
      <div
        class="list-item-row row"
      >
        <div
          class="mx-sm-auto col-1"
        >
          <input
            style="position: absolute; top: 40%; left: 40%;"
            type="checkbox"
          />
          <div
            class="list-item-multi-divider"
          />
        </div>
        <div
          class="col-sm-11 col-10"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/5"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-list text-info mr-3"
                  />
                  foobar
                </h5>
              </a>
            </div>
            <div
              class="list-multi-created pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-complete"
                  disabled=""
                  style="pointer-events: none; opacity: 0.3;"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <a
                  class="p-0 mr-3"
                  data-test-id="incomplete-list-share"
                  disabled=""
                  href="/lists/5/users_lists"
                  style="pointer-events: none; opacity: 0.3;"
                >
                  <i
                    class="fa fa-users fa-2x text-primary"
                  />
                </a>
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-merge"
                  type="button"
                >
                  <i
                    class="fa fa-compress-alt fa-2x text-warning"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="incomplete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Completed Lists
  </h2>
  <p>
    These are the completed lists most recently created. 
    <a
      href="/completed_lists"
    >
      See all completed lists here.
    </a>
      Previously refreshed lists are marked with an asterisk (*).
  </p>
  <div
    class="list-group"
  >
    <div
      class="accepted-list list-group-item"
      data-test-class="completed-list"
      data-test-id="list-2"
      style="display: block;"
    >
      <div
        class="list-item-row row"
      >
        <div
          class="mx-sm-auto col-1"
        >
          <input
            style="position: absolute; top: 40%; left: 40%;"
            type="checkbox"
          />
          <div
            class="list-item-multi-divider"
          />
        </div>
        <div
          class="col-sm-11 col-10"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/2"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-book text-info mr-3"
                  />
                  bar
                </h5>
              </a>
            </div>
            <div
              class="list-multi-created pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="complete-list-refresh"
                  style="pointer-events: auto; opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-redo fa-2x text-primary"
                  />
                </button>
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="complete-list-merge"
                  type="button"
                >
                  <i
                    class="fa fa-compress-alt fa-2x text-warning"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="complete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="accepted-list list-group-item"
      data-test-class="completed-list"
      data-test-id="list-4"
      style="display: block;"
    >
      <div
        class="list-item-row row"
      >
        <div
          class="mx-sm-auto col-1"
        >
          <input
            style="position: absolute; top: 40%; left: 40%;"
            type="checkbox"
          />
          <div
            class="list-item-multi-divider"
          />
        </div>
        <div
          class="col-sm-11 col-10"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/4"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-book text-info mr-3"
                  />
                  bar
                </h5>
              </a>
            </div>
            <div
              class="list-multi-created pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 31 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="complete-list-refresh"
                  disabled=""
                  style="pointer-events: none; opacity: 0.3;"
                  type="button"
                >
                  <i
                    class="fa fa-redo fa-2x text-primary"
                  />
                </button>
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="complete-list-merge"
                  type="button"
                >
                  <i
                    class="fa fa-compress-alt fa-2x text-warning"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="complete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
